# pg-index-health

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pg_index_guard.yml  sql_lint.yml
cli/: README.md  pyproject.toml
cli/pg_index_check/: __init__.py  __main__.py  checker.py  formatters.py  snapshots.py
monitoring/: README.md  docker-compose.yml
monitoring/grafana/dashboards/: pg_index_health.json
monitoring/grafana/provisioning/dashboards/: provider.yml
monitoring/grafana/provisioning/datasources/: postgres.yml
monitoring/initdb/: 01_create_databases.sh
sql/: cleanup_test_data.sql  create_test_data.sql  pg_index_check.sql  redundant_index_check.sql
sql/monitoring/: cleanup_snapshot_schema.sql  create_snapshot_schema.sql  snapshot_procedure.sql  window_analysis.sql
