[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pg-index-check"
version = "0.1.0"
description = "Lightweight PostgreSQL index health checker CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["postgresql", "database", "index", "performance", "dba"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "psycopg2-binary>=2.9",
    "click>=8.1",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
]

[project.scripts]
pg-index-check = "pg_index_check.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pg_index_check*"]
